# AlgoForge_Studio

./: ._cmake_build.out  .gitignore  AGENTS.md  CMakeLists.txt  PHYSICS_README.md  README.md  _cmake_build.out  algorithm_build_common.bat  algorithm_scheduler_center.md  algorithm_scheduler_stage_node_dev_plan.md  algorithm_scheduler_stage_node_refactor_conflict_check.md  build_algorithm.bat  build_algorithm_hot.bat  build_debugtool.bat  build_local.bat  build_sdk.bat  check_sdk.bat  devtask.md  imgui.ini  layerReadme.md  pipelineDevDoc.txt  pipeline_wrapper_blockers_2026-06-26.md  pipeline_wrapper_min_logic.md  run_with_validation_layer.bat
algorithmLib/: CMakeLists.txt  package_algorithm_runtime.ps1
algorithmLib/.build_hot_all/: ALL_BUILD.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  algorithm_packages.sln  algorithm_packages.vcxproj  temporary_test_line_motion_package.vcxproj  temporary_test_line_motion_package.vcxproj.filters  temporary_test_line_motion_plugin.vcxproj  temporary_test_line_motion_plugin.vcxproj.filters  temporary_test_line_motion_shaders.vcxproj  temporary_test_line_motion_shaders.vcxproj.filters  v2a0_pipeline_square_vertex_demo_package.vcxproj  v2a0_pipeline_square_vertex_demo_package.vcxproj.filters  v2a0_pipeline_square_vertex_demo_plugin.vcxproj  v2a0_pipeline_square_vertex_demo_plugin.vcxproj.filters  v2a0_pipeline_square_vertex_demo_shaders.vcxproj  v2a0_pipeline_square_vertex_demo_shaders.vcxproj.filters  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage1_package.vcxproj  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage1_package.vcxproj.filters  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage1_plugin.vcxproj  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage1_plugin.vcxproj.filters  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage1_shaders.vcxproj  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage1_shaders.vcxproj.filters  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage2_package.vcxproj  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage2_package.vcxproj.filters  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage2_plugin.vcxproj  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage2_plugin.vcxproj.filters  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage2_shaders.vcxproj  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage2_shaders.vcxproj.filters  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage3_package.vcxproj  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage3_package.vcxproj.filters  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage3_plugin.vcxproj  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage3_plugin.vcxproj.filters  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage3_shaders.vcxproj  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage3_shaders.vcxproj.filters  v6a6_pbd_ball_collision_demo_package.vcxproj  v6a6_pbd_ball_collision_demo_package.vcxproj.filters  v6a6_pbd_ball_collision_demo_plugin.vcxproj  v6a6_pbd_ball_collision_demo_plugin.vcxproj.filters  v6a6_pbd_ball_collision_demo_shaders.vcxproj  (+1 more)
algorithmLib/.build_hot_gpuverify/: ALL_BUILD.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  algorithm_packages.sln  algorithm_packages.vcxproj  temporary_test_line_motion_package.vcxproj  temporary_test_line_motion_package.vcxproj.filters  temporary_test_line_motion_plugin.vcxproj  temporary_test_line_motion_plugin.vcxproj.filters  temporary_test_line_motion_shaders.vcxproj  temporary_test_line_motion_shaders.vcxproj.filters  v2a0_pipeline_square_vertex_demo_package.vcxproj  v2a0_pipeline_square_vertex_demo_package.vcxproj.filters  v2a0_pipeline_square_vertex_demo_plugin.vcxproj  v2a0_pipeline_square_vertex_demo_plugin.vcxproj.filters  v2a0_pipeline_square_vertex_demo_shaders.vcxproj  v2a0_pipeline_square_vertex_demo_shaders.vcxproj.filters  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage1_package.vcxproj  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage1_package.vcxproj.filters  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage1_plugin.vcxproj  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage1_plugin.vcxproj.filters  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage1_shaders.vcxproj  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage1_shaders.vcxproj.filters  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage2_package.vcxproj  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage2_package.vcxproj.filters  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage2_plugin.vcxproj  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage2_plugin.vcxproj.filters  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage2_shaders.vcxproj  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage2_shaders.vcxproj.filters  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage3_package.vcxproj  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage3_package.vcxproj.filters  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage3_plugin.vcxproj  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage3_plugin.vcxproj.filters  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage3_shaders.vcxproj  v2a0_pipeline_square_vertex_demo_v2a0_pipeline_square_vertex_demo_stage3_shaders.vcxproj.filters  v6a6_pbd_ball_collision_demo_package.vcxproj  v6a6_pbd_ball_collision_demo_package.vcxproj.filters  v6a6_pbd_ball_collision_demo_plugin.vcxproj  v6a6_pbd_ball_collision_demo_plugin.vcxproj.filters  v6a6_pbd_ball_collision_demo_shaders.vcxproj  (+1 more)
(+638 files in other folders)
